# saoriverse-console

./: .codespacesignore  .cpanel.yml  .cspell.json  .dockerignore  .env.example  .env.template  .gitattributes  .gitignore  .htaccess  .markdownlint.json  .pre-commit-config.yaml  .replit  .search_exclude  .secret-allowlist  .yamllint  00_START_HERE.txt  ADAPTIVE_EXTRACTOR_QUICK_SUMMARY.md  ADMIN_PORTAL_ACCESS.md  ADVANCED_PRUNING_SUMMARY.md  ADVANCED_REMNANTS_ANALYSIS.md  ANALYSIS_COMPLETE.md  ANTI_DASH_IMPLEMENTATION.md  ANTI_DASH_IMPLEMENTATION_INDEX.md  ARCHITECTURAL_INTEGRATION_GUIDE.md  ASSET_MANAGEMENT.md  AUDIO_CONVERSATION_IMPLEMENTATION_CHECKLIST.md  AUDIO_CONVERSATION_SESSION_SUMMARY.md  AUDIO_TONE_ANALYSIS_CAPABILITY_AUDIT.md  A_NOTE_FOR_YOU.md  BEFORE_AFTER_COMPARISON.py  BEFORE_AFTER_RESPONSE_IMPROVEMENT.md  BUG_FIX_REPORT.md  BrownNorrisFinalStatement_cleaned.txt  CHANGES_SUMMARY.md  CHARACTER_PIPELINE.md  CNAME  CODE_CHANGES_READY_TO_COPY.md  CODE_LOCATIONS_NEEDING_FIXES.md  COMPLETE_REBALANCING_SUMMARY.md  COMPLETION_REPORT.md  (+672 more)
.devcontainer/: cleanup_root.sh  devcontainer.json  post_create.sh  setup.sh  update_repo_index.sh
.githooks/: README.md  pre-commit
.github/: copilot-instructions.md
.streamlit/: config.toml  pre_run_hook.py  secrets.toml
.venv-edge-tests/: pyvenv.cfg
.venv_test/: pyvenv.cfg
CaseGrid/: app.py  requirements.txt
Darwin/: .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  README.md
DraftShift/: LINE_NUMBER_MAPPER_GUIDE.txt  README.md  __init__.py  app.py  civility_scorer.py  constants.py  contraction_handler.py  core.py  (+13 more)
(+4012 files in other folders)
