[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saoriverse-console"
version = "1.0.0"
description = "Emotional AI companion with local-first processing"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["core", "emotional_os", "tools", "src"]
