[metadata]
name = saoriverse_console
version = 0.0.0
description = Saoriverse Console development package
license = MIT

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.10
include_package_data = True

[options.packages.find]
where = .
include =
    emotional_os*
    local_inference*
